<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buddies Radar</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">My Profile</string>
    <string name="title_section3">Search</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="et_username">Username</string>
    <string name="et_password">Password</string>
    <string name="btn_login">SIGN IN</string>
    <string name="tv_register">Don\'t have an account yet ? Sign Up!</string>
    <string name="title_activity_register">New User</string>
    <string name="dialog_error_title">Opaa!</string>
    <string name="login_invalid_inputs_message">The username and password fields can not be empty</string>
    <string name="et_email">Email</string>
    <string name="btn_register">SIGN UP</string>
    <string name="signup_invalid_inputs_message">The username, password and email fields can not be empty</string>
    <string name="followers_label">follwers</string>
    <string name="following_label">following</string>
    <string name="edit_profile_label">EDIT PROFILE</string>
    <string name="number_sample">100</string>
    <string name="create_btn">CREATE ROOM</string>
    <string name="join_btn">JOIN</string>
    <string name="name_label">Name:</string>
    <string name="avatar_label">Avatar</string>
    <string name="destroy_btn">DESTROY ROOM</string>
    <string name="pass_key_hint">Pass Key</string>
    <string name="create_room_title">Make a cool room!</string>
    <string name="make_room_btn">CREATE</string>
    <string name="cancel_btn">CANCEL</string>
    <string name="create_room_invalid_inputs_message">The Room Name and KeyPass field must not be empty</string>
    <string name="by_label">by: </string>
    <string name="room_name_sample">Cool Room</string>
    <string name="username_sample">tlnguyen</string>
    <string name="no_room_info_tv">Don\'t have any room yet, create one to get one ;-)</string>
    <string name="my_room_label">MY ROOM</string>
    <string name="recent_room_label">NEW ROOMS</string>
    <string name="name_hint">Name</string>
    <string name="check_keypass_title">Enter the passkey to get in!</string>
    <string name="room_register_text">REGISTER</string>
    <string name="passkey_incorrect_message">The passkey is incorrect :-(</string>
    <string name="title_activity_room">Room</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="changePassLabel">Change Password:</string>
    <string name="new_password_hint">New Password</string>
    <string name="new_email_hint">New Email</string>
    <string name="changeAvatarBtn">Browse local picture</string>
    <string name="saveChangesBtn">SAVE CHANGES</string>
    <string name="retype_new_password_hint">Re-type New Password</string>
    <string name="takePictureBtnLabel">Take a picture</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="rooms_search_title">Rooms</string>
    <string name="users_search_title">Users</string>
    <string name="empty_list">No found!</string>
    <string name="search_hint">...</string>
    <string name="search_btn">SEARCH</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="unfollow_text_btn">UNFOLLOW</string>
    <string name="follow_text_btn">FOLLOW</string>
    <string name="unregister_text_btn">UNREGISTER</string>
    <string name="register_text_btn">REGISTER</string>
    <string name="edit_room_btn">EDIT ROOM</string>
    <string name="title_activity_following">FollowingActivity</string>
    <string name="title_activity_edit_room">Room Settings</string>
    <string name="detailsHaveBeenSaved">You details have been changed but your password change failed!</string>
    <string name="allDetailsHaveBeenSaved">All details have been changed successfully!</string>
    <string name="title_activity_maps">Map</string>
    <string name="tracking_status_action">Tracking Status</string>
    <string name="galeryBtn">Gallery</string>
    <string name="cameraBtn">Camera</string>
    <string name="delete">Delete</string>
    <string name="membersHaveBeenRemoved">"The members you've selected have been removed from your room. "</string>
    <string name="cant_select_yourself_warning">Can\'t select yourself</string>
    <string name="app_sub_title">A MentorMate Academy Project</string>
    <string name="member_header_text">MEMBERS</string>
    <string name="home_text">HOME</string>
    <string name="nothing_changed_text">Nothing changed</string>
    <string name="kick_out_text_title">You were kicked from the room</string>
    <string name="kickout_text_description">Contact the room owner for more information</string>
    <string name="statusUpdate">Status</string>
    <string name="update_button">UPDATE</string>
    <string name="dialog_change_status_title">Change status</string>

</resources>
