<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bg.mentormate.academy.radarapp.activities.LoginActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/AuthTitle"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tvSubTitle"
        style="@style/AuthTitle.AuthSubTitle"
        android:text="@string/app_sub_title" />

    <LinearLayout
        android:id="@+id/llEdit"
        style="@style/AuthEditFieldContainer">

        <EditText
            android:id="@+id/etUsername"
            style="@style/AuthEditText"
            android:hint="@string/et_username">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etPassword"
            style="@style/AuthEditText"
            android:hint="@string/et_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Button"
        android:layout_below="@id/llEdit"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/tv_register"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>
