<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imAvatar"
        android:src="@drawable/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/number_sample"
        android:id="@+id/tvFollowersCount"
        android:layout_alignTop="@+id/imAvatar"
        android:layout_alignLeft="@+id/tvFollowersLabel"
        android:layout_alignStart="@+id/tvFollowersLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/number_sample"
        android:id="@+id/tvFollowingCount"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvFollowersCount"
        android:layout_toEndOf="@+id/tvFollowersCount"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/followers_label"
        android:id="@+id/tvFollowersLabel"
        android:layout_below="@+id/tvFollowersCount"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/following_label"
        android:id="@+id/tvFollowingLabel"
        android:layout_below="@+id/tvFollowingCount"
        android:layout_alignLeft="@+id/tvFollowingCount"
        android:layout_alignStart="@+id/tvFollowingCount" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_label"
        android:id="@+id/btnEditProfile"
        android:layout_alignBottom="@+id/imAvatar"
        android:layout_toRightOf="@+id/imAvatar"
        android:layout_toEndOf="@+id/imAvatar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
