<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:layout_marginLeft="@dimen/list_item_horizontal_margin"
    android:layout_marginRight="@dimen/list_item_horizontal_margin"
    android:layout_marginTop="@dimen/list_item_vertical_margin"
    android:layout_marginBottom="@dimen/list_item_vertical_margin"
    android:padding="@dimen/list_item_padding"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRoomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/room_name_vertical_margin"
            android:layout_marginBottom="@dimen/room_name_vertical_margin"
            android:text="@string/room_name_sample"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_label"
                android:layout_marginRight="@dimen/room_name_vertical_margin"
                android:layout_marginLeft="@dimen/room_name_vertical_margin"
                android:padding="@dimen/room_name_vertical_margin"
                android:textColor="@color/br_hint_text"/>

            <com.parse.ParseImageView
                android:id="@+id/pivAvatar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/br_text"
                android:text="@string/username_sample"
                android:padding="@dimen/room_name_vertical_margin"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="end"
        android:orientation="horizontal" >

        <bg.mentormate.academy.radarapp.views.RegisterButton
            android:id="@+id/rbRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnJoin"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_btn"
            android:textColor="@color/br_text"/>

    </LinearLayout>

</LinearLayout>